updated rubric for HW2&3 to include adding repo link to google sheet

--- a/course-materials/assignments/HW2.qmd
+++ b/course-materials/assignments/HW2.qmd
@@ -129,4 +129,5 @@ To recieve a "Satisfactory" on HW #2:
 - [ ] **All your work is housed in an organized and polished `eds240-nri-acs-viz` GitHub repository.** Your README includes all required information, as described in the [MEDS README Guidelines](https://ucsb-meds.github.io/README-guidelines/){target="_blank"}. Your data folder should is added to your `.gitignore`.
 - [ ] **Render `HW2.qmd` as a PDF.** Double check that all of your outputs, code, and prose are visible.
 - [ ] **Upload your PDF to Gradescope** by 11:59pm on Wed 01/28/2026.
+- [ ] **Add your GitHub repo URL to this [Google Sheet](https://docs.google.com/spreadsheets/d/1fERw6kvSyAf30rY9ZHtFRIu01wM3qGa8cBQU-AGzh-g/edit?usp=sharing){target="_blank"}** by 11:59pm on Wed 01/28/2026 (so that we can find your README) 
 - [ ] **Submit a [Generative AI Statement of Use](https://forms.gle/uCw7U5jzJAKahjA4A){target="_blank}** for HW #2 by 11:59pm on Wed 01/28/2026.
