--- a/course-materials/assignments/HW3.qmd
+++ b/course-materials/assignments/HW3.qmd
@@ -163,6 +163,7 @@ To recieve a "Satisfactory" on HW #3:
 - [ ] **All your work is housed in your organized and polished `eds240-nri-acs-viz` GitHub repository.** Your README is updated to include any new relevant information. You've verified that your new ACS data are saved to your `data/` folder, which is ignored by `.gitignore`.
 - [ ] **Render `HW3.qmd` as a PDF.** Double check that all of your outputs, code, and prose are visible.
 - [ ] **Upload your PDF to Gradescope** by 11:59pm on Wed 02/11/2026.
+- [ ] **Double check that you added your GitHub repo URL to this [Google Sheet](https://docs.google.com/spreadsheets/d/1fERw6kvSyAf30rY9ZHtFRIu01wM3qGa8cBQU-AGzh-g/edit?usp=sharing){target="_blank"}** (you should have done this already as part of HW #2)
 - [ ] **Submit a [Generative AI Statement of Use](https://forms.gle/uCw7U5jzJAKahjA4A){target="_blank}** for HW #3 by 11:59pm on Wed 02/11/2026.
 
 
