--- a/course-materials/lab/LAB-SLIDES-usdm-graphic-form.qmd
+++ b/course-materials/lab/LAB-SLIDES-usdm-graphic-form.qmd
@@ -17,11 +17,9 @@ editor_options:
 
 [*Recreating US Drought Monitor viz*]{.custom-subtitle}
 
-[*Part 1: graphic form*]{.custom-subtitle2}
-
 <hr class="hr-dark-blue">
 
-[Week 2 | January 14^th^, 2025]{.custom-subtitle3}
+[Week 3 | January 22^nd^, 2026]{.custom-subtitle3}
 
 ---
 
@@ -101,20 +99,117 @@ knitr::include_graphics(here::here("course-materials", "images", "lab-materials"
 
 ---
 
+
+## {#ggplot-theme data-menu-title="ggplot theme"}
+
+[Themes modify *non-data* plot elements]{.slide-title}
+
+<hr>
+
+<br>
+
+::: {.body-text-m}
+**Themes** are used to modify the **non-data components** of plots (e.g. titles, labels, fonts, background, gridlines, legend).
+
+<br>
+
+In addition to using **pre-built themes** (available via the [`{ggplot2}` package](https://ggplot2.tidyverse.org/reference/ggtheme.html){target="_blank"} and also from extension packages), you can **fine-tune** the appearance of your plots theme by making adjustments using the **[`theme()` function](https://ggplot2.tidyverse.org/reference/theme.html){target="_blank"}**.
+:::
+
+---
+
+## {#prebuilt-themes data-menu-title="Pre-built themes"}
+
+[Pre-built themes]{.slide-title}
+
+<hr>
+
+`{ggplot2}` comes with **eight [complete themes](https://ggplot2.tidyverse.org/reference/ggtheme.html){target="_blank"}**, which can be applied as-is, or further modified using `theme()`. There are also *many* **additional themes** which can be applied via **ggplot extension packages**. A small handful of packages with additional themes:
+
+- [**[`{ggthemes}`](https://jrnold.github.io/ggthemes/){target="_blank"}**: a collection of popular themes, some of which also come with corresponding color scales]{.body-text-s}
+- [**[`{hrbrthemes}`](https://cinc.rud.is/web/packages/hrbrthemes/index.html){target="_blank"}**: typographic-centric themes and theme components]{.body-text-s}
+-[ **[`{ggthemr}`](https://github.com/Mikata-Project/ggthemr){target="_blank"}**: a collection of color palettes and plot layouts for quickly setting a ggplot theme]{.body-text-s}
+- [**[`{ggtech}`](https://github.com/ricardo-bion/ggtech){target="_blank"}**: themes based off large tech company color palettes]{.body-text-s}
+- [**[`{ggdark}`](https://github.com/nsgrantham/ggdark){target="_blank"}**: dark mode for ggplot complete themes]{.body-text-s}
+- [**[`{firatheme}`](https://github.com/vankesteren/firatheme){target="_blank"}**: a ggplot theme with [Fira font](https://fonts.google.com/?query=fira){target="_blank"}]{.body-text-s}
+- [**[`{urbnthemes}`](https://urbaninstitute.github.io/urbnthemes/index.html){target="_blank"}**: tools for creating [Urban Institute](https://www.urban.org/){target="_blank"}-themed plots and maps in R (also check out the [Urban Institute Data Visualization Style Guide](https://urbaninstitute.github.io/graphics-styleguide/){target="_blank"} for a really great example of how an organization enforces a cohesive style across all published data viz content)]{.body-text-s}
+- [**[`{bbplot}`](https://github.com/bbc/bbplot/){target="_blank"}**: tools for creating ggplots in the style used by the [BBC News](https://www.bbc.com/news) data team]{.body-text-s}
+- [**[`{ggpomological}`](https://www.garrickadenbuie.com/project/ggpomological/){target="_blank"}**: a ggplot2 theme based on the [USDA Pomological Watercolor Collection](https://search.nal.usda.gov/discovery/collectionDiscovery?vid=01NAL_INST:MAIN&collectionId=81279629860007426)]{.body-text-s}
+- [**[`{tvthemes}`](https://ryo-n7.github.io/2019-05-16-introducing-tvthemes-package/){target="_blank"}**: a collection of ggplot themes and color / fill palettes based on everybody's favorite TV shows]{.body-text-s}
+
+---
+
+## {#plot-specific-themes data-menu-title="Plot-specific themes"}
+
+[Keep an eye out for plot-specific themes]{.slide-title}
+
+<hr>
+
+Keep your eye out for extension **packages that supply both a geom(s) *and* a pre-build theme(s) designed specifically to work with that geom**. For example, the [`{ggridges}` package](https://wilkelab.org/ggridges/index.html){target="_blank"} provides both a few different ridgeline plot geoms and a [pre-built `theme_ridges()` theme](https://wilkelab.org/ggridges/articles/introduction.html#themes){target="_blank"} to pair with them:
+
+<br>
+
+```{r}
+#| eval: true
+#| echo: false
+#| warning: false
+#| message: false
+#| fig-align: "center"
+#| out-width: "100%"
+library(palmerpenguins)
+library(tidyverse)
+library(ggridges)
+ggplot(penguins, aes(x = flipper_length_mm, y = species)) +
+  geom_density_ridges() +
+  theme_ridges()
+```
+
+
+--- 
+
+## {#theme data-menu-title="theme()"}
+
+[Use `ggplot2::theme()` for fine-tune control]{.slide-title2}
+
+<hr>
+
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "100%"
+knitr::include_graphics(here::here("course-materials", "images", "lab-materials", "ggplot-theme.png"))
+```
+
+::: {.footer}
+*Adapted from [Reproducible Science for Busy Researchers: How to Save Time using Literate Programming](https://bookdown.org/alapo/learnr/data-visualisation.html#anatomy-of-a-ggplot){target="_blank"}, by Andrew P. Lapointe*
+:::
+
+---
+
+
 ## {#gameplan data-menu-title="Our gameplan"}
 
 [Let's recreate this USDM viz!]{.slide-title}
 
 <hr>
 
-We'll be recreating this data visualization produced by U.S. Drought Monitor (you can find on the [*Droughts in California* Wikipedia page](https://en.wikipedia.org/wiki/Droughts_in_California)!):
+We'll be recreating this data visualization produced by U.S. Drought Monitor (you can find on the [*Droughts in California* Wikipedia page](https://en.wikipedia.org/wiki/Droughts_in_California)!
 
 ```{r}
 #| eval: true
 #| echo: false
 #| fig-align: "center"
-#| out-width: "75%"
+#| out-width: "100%"
 knitr::include_graphics(here::here("course-materials", "images", "lab-materials", "usdm.png"))
 ```
 
-**This week, we'll focus on the data layer, geometric layer, and scales.** During week 4 lab, we'll work on tweaking the theme (all non-data elements) to get it to look just like the U.S. Drought Monitor's version.
+
+**We will first focus on the data layer, geometric layer, and scales.** Then, we'll work on tweaking the theme (all non-data elements) to get it to look just like the U.S. Drought Monitor's version.
+
+Reference the graphic on the previous slide (and of course, documentation -- run `?theme` or check out [online documentation](https://ggplot2.tidyverse.org/reference/theme.html){target="_blank"}) to start tweaking plot elements until it matches the original USDM graphic (below). It's common to start with a pre-built theme and modify from there. 
+
+
+::: {.footer}
+Image source: [US Drought Monitor via Wikipedia](https://en.wikipedia.org/wiki/Droughts_in_California){target="_blank"}
+:::
