--- a/course-materials/week3.qmd
+++ b/course-materials/week3.qmd
@@ -10,7 +10,7 @@ description: "Wednesday January 21^st^, 2026"
 #| fig-align: "center"
 #| out-width: "80%" 
 #| fig-alt: "A stacked area chart of drought area in California from 2000 to 2025, showing percentage of land area in the state by the U.S. Drought Monitor categories, ranging from D0: Abnormaly Dry to D4: Exceptional."
-knitr::include_graphics(here::here("images", "usdm.png"))
+knitr::include_graphics(here::here("course-materials", "images", "lab-materials", "usdm.png"))
 ```
 
 :::{.gray-text .center-text}
@@ -90,11 +90,21 @@ Oftentimes, packages that are built to interface with APIs will include their ow
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lab Prep {#pre-lab-prep} 
 
-### A. Prepare a `week3-lab.qmd` file
+### A. Download data {#download-data}
+
+Head to the [Comprehensive Statistics Download Data](https://droughtmonitor.unl.edu/DmData/DataDownload/ComprehensiveStatistics.aspx) page on the [USDM Website](https://droughtmonitor.unl.edu/). Select the following options, click "Submit", and save the downloaded data to your class repo at `EDS-240-class-examples/week3/data/`
+
+![](images/lab-materials/drought_data_download.png)
+
+ Dataset title | Download link | Notes |
+|---------------|---------------|-------|
+| US Drought Monitor Comprehensive Statistics | download the .csv file that is generated with the above specifications from the [Comprehensive Statistics Data Download Page](https://droughtmonitor.unl.edu/DmData/DataDownload/ComprehensiveStatistics.aspx) on the [USDM Website](https://droughtmonitor.unl.edu/) *([Google Drive backup link](https://drive.google.com/file/d/1SQOUoCD9RZIpzm2rKyjKenRlMFiCKhny/view?usp=drive_link){target="_blank"}, in case the USDM is unavailable)* | |
+
+### B. Prepare a `week3-lab.qmd` file
 
 Add a new blank file to your class repo at the following location: `EDS-240-class-examples/week3/week3-lab.qmd.` Fill out the necessary YAML information (title, author, date + any other information you find helpful).
 
-### B. (OPTIONAL) Install Chrome extension for picking colors
+### C. (OPTIONAL) Install Chrome extension for picking colors
 
 Install the [ColorZilla](https://chromewebstore.google.com/detail/colorzilla/bhlhnicpbhignbdhedgjhgdocnmhomnp){target="_blank"} Google Chrome extension (also available for [Firefox](https://www.colorzilla.com/firefox/){target="_blank"}), which makes it easy to select color values from webpages.
 
