--- a/course-materials/lab/LAB-SLIDES-usdm-graphic-form.qmd
+++ b/course-materials/lab/LAB-SLIDES-usdm-graphic-form.qmd
@@ -81,7 +81,7 @@ Since 2018, participants of all skill levels have imported, wrangled, and visual
 
 <hr>
 
-The TidyTuesday community wrangled and visualized USDM data back in 2021 ([2021-07-20, week 30](https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-07-20/readme.md){target="_blank"}), so we'll import some <sup>*</sup>minimally-tidied data directly from the TidyTuesday GitHub repository.
+The TidyTuesday community wrangled and visualized USDM data back in 2021 ([2021-07-20, week 30](https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-07-20/readme.md){target="_blank"}). We will replicate this TidyTuesday with more recent data (up to 2026!)
 
 ```{r}
 #| eval: true
