--- a/course-materials/lab/LAB-EXERCISE-usdm-graphic-form.qmd
+++ b/course-materials/lab/LAB-EXERCISE-usdm-graphic-form.qmd
@@ -86,7 +86,7 @@ drought_clean |>
 #| eval: true
 #| echo: false
 #| fig-align: "center"
-knitr::include_graphics(here::here("course-materials", "images", "usdm.png"))
+knitr::include_graphics(here::here("course-materials", "images", "lab-materials", "usdm.png"))
 ```
 
 It can be helpful to tackle one small(ish) thing at a time. Consider the following "stages":
