--- a/course-materials/week3.qmd
+++ b/course-materials/week3.qmd
@@ -98,7 +98,8 @@ Head to the [Comprehensive Statistics Download Data](https://droughtmonitor.unl.
 
  Dataset title | Download link | Notes |
 |---------------|---------------|-------|
-| US Drought Monitor Comprehensive Statistics | download the .csv file that is generated with the above specifications from the [Comprehensive Statistics Data Download Page](https://droughtmonitor.unl.edu/DmData/DataDownload/ComprehensiveStatistics.aspx) on the [USDM Website](https://droughtmonitor.unl.edu/) *([Google Drive backup link](https://drive.google.com/file/d/1SQOUoCD9RZIpzm2rKyjKenRlMFiCKhny/view?usp=drive_link){target="_blank"}, in case the USDM is unavailable)* | |
+| US Drought Monitor Comprehensive Statistics | download the .csv file that is generated with the above specifications from the [Comprehensive Statistics Data Download Page](https://droughtmonitor.unl.edu/DmData/DataDownload/ComprehensiveStatistics.aspx) on the [USDM Website](https://droughtmonitor.unl.edu/) *([Google Drive backup link](https://drive.google.com/file/d/1SQOUoCD9RZIpzm2rKyjKenRlMFiCKhny/view?usp=drive_link){target="_blank"}, in case the USDM is unavailable)* | *NA* |
+: {.hover .bordered tbl-colwidths="[30,30,30]"} 
 
 ### B. Prepare a `week3-lab.qmd` file
 
