--- a/course-materials/lab/LAB-SOLUTION-usdm-graphic-form.qmd
+++ b/course-materials/lab/LAB-SOLUTION-usdm-graphic-form.qmd
@@ -45,42 +45,7 @@ drought_clean <- drought |>
          month = month(date, label = TRUE, abbr = TRUE),
          day = day(date)) |>
 
-  # add drought level conditions names ----
-  mutate(drought_lvl_long = factor(drought_lvl,
-                            levels = c("D4", "D3", "D2", "D1","D0", "None"),
-                            labels = c("(D4) Exceptional", "(D3) Extreme",
-                                       "(D2) Severe", "(D1) Moderate", 
-                                       "(D0) Abnormaly Dry", 
-                                       "No Drought"))) |>
-  
-  # reorder cols ----
-  relocate(date, year, month, day, state_abb, drought_lvl, drought_lvl_long, area_pct)
-
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-##       create stacked area plot of CA drought conditions through time     ----
-##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-drought_clean <- drought |>
-  
-  # Pivot table to be in tidy form
-  pivot_longer(cols = None:D4, names_to = "drought_lvl", values_to = "area_pct") |>
-  
-  janitor::clean_names() |>
-  
-  # Rename state abbreviation column
-   rename(state_abb = state_abbreviation) |>
-
-
-  # select cols of interest & update names for clarity (as needed) ----
-  select(date = valid_start, state_abb, drought_lvl, area_pct) |> 
-
-  # add year, month & day cols using {lubridate} fxns ----
-  # NOTE: this step isn't necessary for our plot, but I'm including as examples of how to extract different date elements from a object of class Date using {lubridate} ----
-  mutate(year = year(date),
-         month = month(date, label = TRUE, abbr = TRUE),
-         day = day(date)) |>
-
-  # add drought level conditions names ----
+  # add drought level conditions names ---- 
   mutate(drought_lvl_long = factor(drought_lvl,
                             levels = c("D4", "D3", "D2", "D1","D0", "None"),
                             labels = c("D4 (Exceptional)", "(D3) Extreme",
@@ -94,7 +59,6 @@ drought_clean <- drought |>
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##       create stacked area plot of CA drought conditions through time     ----
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
 drought_clean |> 
   
   # remove drought_lvl "None" & filter for just CA ----
@@ -114,7 +78,7 @@ drought_clean |>
   # set x-axis breaks & remove padding between data and x-axis ----
   scale_x_date(breaks = scales::breaks_pretty(n = 13),
                 limits = as.Date(c("2000-01-01", "2026-12-31")),
-               expand = c(0, 0)) +
+               expand = c(0,0)) +
 
   # set y-axis breaks & remove padding between data and y-axis & convert values to percentages ----
   scale_y_continuous(breaks = seq(0, 100, by = 10),
