--- a/resources.qmd
+++ b/resources.qmd
@@ -161,16 +161,19 @@ Data are *everywhere*, but that doesn't mean they're necessarily easy to track d
 - **[EPA's National Emissions Inventory (NEI) Data Retrieval Tool](https://awsedap.epa.gov/public/single/?appid=20230c40-026d-494e-903f-3f112761a208&sheet=5d3fdda7-14bc-4284-a9bb-cfd856b9348d&opt=ctxmenu,currsel)** – read more about NEI Data on the [EPA's website](https://www.epa.gov/air-emissions-inventories/2020-national-emissions-inventory-nei-data)
 - **[NOAA's National Centers for Environmental Information](https://www.ncei.noaa.gov/)** – specifically, check out their [Climate Monitoring Products](https://www.ncei.noaa.gov/access/monitoring/products/) (I used the [County Mapping](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202310/1/value) interface to download precipitation data featured in [Lecture 5.3](https://samanthacsik.github.io/EDS-240-data-viz/slides/week5.3-choropleth.html#/title-slide)'s choropleth map)
 - **[`{tidycensus}` package](https://walker-data.com/tidycensus/)** – tooling that allows R users to more easily interface with a select number of the [US Census Bureau](https://www.census.gov/)'s data APIs and return tidyverse-ready data frames
+ - **[ERDDAP Datasets](https://www.ncei.noaa.gov/erddap/info/index.html?page=1&itemsPerPage=1000)** -- [ERDDAP™](https://coastwatch.pfeg.noaa.gov/erddap/index.html) (by NOAA) is a scientific data server that gives users a simple, consistent way to download subsets of gridded and tabular scientific datasets in common file formats and make graphs and maps. 
+  - **[CalCOFI Data Portal](https://calcofi.org/data/)** -- CalCOFI conducts quarterly cruises off southern & central California to collect a suite of environmental and marine ecosystem data. These data are used to study the California Current, manage its living resources, and monitor the indicators of El Niño and climate change.
 
-### misc data sources {#misc}
+### scientific / research data {#research-data}
+- **[Nature Scientific Data](https://www.nature.com/sdata/)** - an open-access, online-only journal for descriptions of scientifically valuable datasets; check out the "Subject" dropdown menu to filter for domain-specific data sets (e.g. there's a subsection for Earth and environmental sciences)
 - **[ESIIL Data Library](https://cu-esiil.github.io/data-library/)** – The Environmental Data Science Innovation and Inclusion Lab (ESIIL) Data Library, which features a diverse range of data sets, each with its own dedicated web page
+
+### misc data sources {#misc-data}
 - **[Data is Plural](https://www.data-is-plural.com/archive/)** – a weekly newsletter (and seasonal podcast) of useful / curious data sets, published by [Jeremy Singer-Vine](https://www.jsvine.com/)
 - **[tidytuesday](https://github.com/rfordatascience/tidytuesday)** – a weekly social data project that shares minimally-cleaned data sets covering a variety of topics for the [R4DS community](https://rfordatasci.com/) to visualize; organizers share links to the original data sources, as well as the scripts used to clean them prior to publishing
 - **[awesome-public-datasets](https://github.com/awesomedata/awesome-public-datasets)** – a repository containing a list of high quality, topic-centric public data sources 
 - **[Information is Beautiful](https://informationisbeautiful.net/data/)** -- Founded by [David McCandless](https://davidmccandless.com/), Information is Beautiful is dedicated to making sense of the world with graphics & data-visuals. We set out to explain, distill and clarify. All our visualizations are based on facts and data: constantly updated, revised and revisioned.
  - **[Kaggle Datasets](https://www.kaggle.com/datasets)** -- Kaggle is an online community for data scientists and machine learning practitioners to find and publish data, as well as enter competitions to solve data science challenges
- - **[CalCOFI Data Portal](https://calcofi.org/data/)** -- CalCOFI conducts quarterly cruises off southern & central California to collect a suite of environmental and marine ecosystem data. These data are used to study the California Current, manage its living resources, and monitor the indicators of El Niño and climate change.
- - **[ERDDAP Datasets](https://www.ncei.noaa.gov/erddap/info/index.html?page=1&itemsPerPage=1000)** -- [ERDDAP™](https://coastwatch.pfeg.noaa.gov/erddap/index.html) (by NOAA) is a scientific data server that gives users a simple, consistent way to download subsets of gridded and tabular scientific datasets in common file formats and make graphs and maps. 
 
 ## Volunteer {#volunteer}
 
